force-app/main/default/objects/XactlyExpress__XCReleaseResult__c/XactlyExpress__XCReleaseResult__c.object-meta.xml
<CustomObject>
    <label>XCReleaseResult</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Release Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XCReleaseResults</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>