force-app/main/default/objects/XactlyExpress__XCReleaseResult__c/fields/XactlyExpress__DealResultID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DealResultID__c</fullName>
    <label>DealResultID</label>
    <referenceTo>XactlyExpress__XCDealResult__c</referenceTo>
    <relationshipName>XCReleases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>