force-app/main/default/objects/XactlyExpress__XCReleaseResult__c/fields/XactlyExpress__IsReleased__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__IsReleased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReleased</label>
    <type>Checkbox</type>
</CustomField>