force-app/main/default/objects/XactlyExpress__XCReleaseResult__c/fields/XactlyExpress__ManualRelease__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ManualRelease__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ManualRelease</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>