force-app/main/default/objects/XactlyExpress__XCReleaseResult__c/fields/XactlyExpress__ReleaseOrder__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReleaseOrder__c</fullName>
    <label>ReleaseOrder</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>