force-app/main/default/objects/XactlyExpress__XCReleaseResult__c/fields/XactlyExpress__ReleaseRuleDetailID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReleaseRuleDetailID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReleaseRuleDetailID</label>
    <referenceTo>XactlyExpress__XCReleaseRuleDetail__c</referenceTo>
    <relationshipLabel>XCReleaseResults</relationshipLabel>
    <relationshipName>XCReleaseResults</relationshipName>
    <type>Lookup</type>
</CustomField>