force-app/main/default/objects/XactlyExpress__XCReleaseResult__c/fields/XactlyExpress__ScheduledPeriod__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ScheduledPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track original scheduled period for undo a force released scheduled release.</description>
    <label>ScheduledPeriod</label>
    <referenceTo>XactlyExpress__XCPeriod__c</referenceTo>
    <relationshipLabel>XCReleases (ScheduledPeriod)</relationshipLabel>
    <relationshipName>XCReleases1</relationshipName>
    <type>Lookup</type>
</CustomField>