force-app/main/default/objects/XactlyExpress__XCReleaseResult__c/fields/XactlyExpress__TotalRelease__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__TotalRelease__c</fullName>
    <formula>XactlyExpress__ReleaseAmount__c +  XactlyExpress__ManualRelease__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalRelease</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>