force-app/main/default/objects/XactlyExpress__XCReleaseResult__c/fields/XactlyExpress__Type__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>